--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 
 ###> symfony/framework-bundle ###
-# /config/secrets/prod/prod.decrypt.private.php
-# /public/bundles/
-# /var/
-# /vendor/
+/config/secrets/prod/prod.decrypt.private.php
+/public/bundles/
+/var/
+/vendor/
 ###< symfony/framework-bundle ###
 
 ###> symfony/phpunit-bridge ###
